# num-methods

./: '  .gitignore  \  helper.lisp
cw/: cw.asd  display-distr.lisp  main.lisp  norm-distr.lisp  package.lisp
lab0/: lab0.asd  main.lisp  package.lisp
lab00/: lab00.asd
lab1/: first-newthon.lisp  lab1.asd  lagrange.lisp  main.lisp  package.lisp  second-newthon.lisp
lab2/: first-newthon.lisp  lab2.asd  main.lisp  package.lisp  poly.lisp  second-newthon.lisp
lab3/: gauss.lisp  lab3.asd  main.lisp  package.lisp  simpson.lisp  trapezoid.lisp
lab4/: lab4.asd  main.lisp  package.lisp
lab5/: lab5.asd  main.lisp  package.lisp
lab6/: lab6.asd  main.lisp  package.lisp
labs_new/: CMakeLists.txt  compile_commands.json
labs_new/include/sertable/: blister.hh
labs_new/labs/: CMakeLists.txt
labs_new/labs/lab3/: main.cc
labs_new/labs/lab4/: CMakeLists.txt  main.cc
labs_old/: compile_commands.json
labs_old/include/lab3/: Rn.hh
labs_old/include/sertable/: blister.hh  try_blister.hh
labs_old/labs/: CMakeLists.txt
labs_old/labs/lab2/: CMakeLists.txt  main.cc
labs_old/labs/lab3/: CMakeLists.txt  main.cc
reports/cw/: document.tex  header.tex  hyphenat.tex
reports/cw/content/: calc.tex  exec.tex  listing.tex  prob-init.tex  red-int.tex  (+3 more)
reports/lab1/: document.tex  header.tex
reports/lab2/: flake.nix  foo.txt  header.aux  header.tex
reports/lab2_1/: header.tex
reports/lab3/: document.tex  foo.lisp  header.tex  hyph.tex  t.txt  t2.txt  table.txt
tble-cnst/: cmf.lisp  dialogs.lisp  int.lisp  interpl.lisp  nde.lisp  package.lisp  tble-cnst.asd
(+47 files in other folders)
